<resources>
    <string name="app_name">FriendsUp</string>
    <string name="title_home">Friends</string>
    <string name="title_dashboard">Meetings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="add_contact">Add From Contact</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="dob">Date Of Birth</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="startT">Start Time</string>
    <string name="endT">End Time</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="empty_friend_list">No friends, please add friends</string>
    <string name="press_to_pick_date">Press to pick date</string>
    <string name="birthday">Birthday</string>
    <string name="import_from_contact">Import from contact</string>
    <string name="title_activity_maps2">Map</string>
    <string name="remind">Remind Me in X mins</string>
    <string name="suggest">Suggest</string>

</resources>
