<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.skye.friendsup.Controllers.MainActivity">

    <RelativeLayout
        android:id="@+id/RelayoutBGMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/addNewF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/switchMeeting"
            android:layout_alignBottom="@+id/switchMeeting"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="addNewF"
            android:text="@string/add" />


        <Button
            android:id="@+id/switchMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="gotoMeeting"
            android:text="@string/title_dashboard" />

        <TextView
            android:id="@+id/Friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/switchMeeting"
            android:layout_centerHorizontal="true"
            android:text="@string/title_home"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


    </RelativeLayout>

    <ListView
        android:id="@+id/friendList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@android:dimen/notification_large_icon_height" />

    <TextView
        android:id="@+id/emptyFriendList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty_friend_list"
        android:textAlignment="center" />


</LinearLayout>
