<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.skye.friendsup.Controllers.EditFriendActivity">

    <RelativeLayout
        android:id="@+id/RelayoutBG2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:contentDescription="@android:string/unknownName"
            android:onClick="changeImage2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/icon0"
            tools:layout_editor_absoluteY="70dp" />

        <Button
            android:id="@+id/addFromContact2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="addFromContact2"
            android:text="@string/add_contact" />

        <EditText
            android:id="@+id/nameText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailText2"
            android:layout_alignStart="@+id/emailText2"
            android:layout_below="@+id/addFromContact2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name" />

        <EditText
            android:id="@+id/emailText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dobText2"
            android:layout_alignStart="@+id/dobText2"
            android:layout_below="@+id/nameText2"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:text="@string/email" />

        <EditText
            android:id="@+id/dobText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailText2"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="text"
            android:onClick="refreshDate2"
            android:text="@string/dob" />

        <Button
            android:id="@+id/pickDate2"
            android:layout_width="@android:dimen/notification_large_icon_height"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_alignBottom="@+id/dobText2"
            android:layout_toEndOf="@+id/dobText2"
            android:layout_toRightOf="@+id/dobText2"
            android:onClick="pickDate2"
            android:text="@string/add" />

        <Button
            android:id="@+id/addButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="editFriend"
            android:text="@string/save" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
