<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.skye.friendsup.Activity.EditMeetingActivity">

    <RelativeLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/addMeeting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="editMeeting"
            android:text="@string/save" />

        <EditText
            android:id="@+id/locationText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/endText"
            android:layout_alignStart="@+id/endText"
            android:layout_below="@+id/endText"
            android:ems="10"
            android:hint="@string/location"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/endText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/startText"
            android:layout_alignStart="@+id/startText"
            android:layout_below="@+id/startText"
            android:ems="10"
            android:hint="@string/endT"
            android:inputType="date"
            android:onClick="refreshT2" />

        <EditText
            android:id="@+id/startText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/titleText2"
            android:layout_alignStart="@+id/titleText2"
            android:layout_below="@+id/titleText2"
            android:ems="10"
            android:hint="@string/startT"
            android:inputType="date"
            android:onClick="refreshT1" />

        <EditText
            android:id="@+id/titleText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/friendShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/locationText2"
            android:layout_below="@+id/locationText2"
            android:ems="10"
            android:inputType="textPersonName" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
